# SetGame

./: CMakeLists.txt  README.md  main.cpp
